@@ -1,4 +1,7 @@
-Thu Nov 20 02:09:34 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Thu Nov 20 02:10:31 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (ripper_flush_string_content, parser_parse_string):
+	  preserve parsed string content.
 
 	* parse.y (ripper_new_yylval): abstract function to create ripper
 	  wrapper, and make it able to hold another object.
